# cmake

./: .gitignore  CMakeLists.txt  Makefile  README.md
powerstrip-files/: compile  powerusb  powerusb.cpp  powerusb.h
src/: .main.cpp.swp  CMakeLists.txt  PwrUSBHid.c  PwrUSBHid.h  PwrUSBImp.cpp  README  compile  main.cpp  off.cpp  on.cpp
src/powerstrip/: PwrUSBImp.h
src/powerstrip/udev/: 99-powerusb.rules  README
